--- a/_data/data.yml
+++ b/_data/data.yml
@@ -7,16 +7,16 @@ sidebar:
     education: True # set to False if you want education in main section instead of in sidebar
 
     # Profile information
-    name: Alan Doe
+    name: Bimesh UPRETI
     tagline: Full Stack Developer
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: mesanobabu@gmail.com
-    phone: 012 345 6789
+    phone: 04 51 05 03 06
     website: blog.webjeda.com #do not add http://
     linkedin: alandoe
-    github: sharu725
+    github: https://github.com/bimeshupreti
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
