--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,38 +8,38 @@ sidebar:
 
     # Profile information
     name: Bimesh UPRETI
-    tagline: Full Stack Developer
+    tagline: Data Scientist
     avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: mesanobabu@gmail.com
     phone: 04 51 05 03 06
     website: blog.webjeda.com #do not add http://
-    linkedin: alandoe
+    linkedin: Bimesh Upreti
     github: https://github.com/bimeshupreti
     telegram: # add your nickname without '@' sign
     gitlab:
     bitbucket:
-    twitter: '@webjeda'
+    twitter: 
     stack-overflow: # Number/Username, e.g. 123456/alandoe
     codewars:
     goodreads: # Number-Username, e.g. 123456-alandoe
 
     languages:
-      - idiom: English
+      - idiom: Nepali
         level: Native
 
       - idiom: French
-        level: Professional
+        level: Good
 
-      - idiom: Spanish
+      - idiom: English
         level: Professional
 
     interests:
-      - item: Climbing
+      - item: Hiking
         link:
 
-      - item: Snowboarding
+      - item: Travel
         link:
 
       - item: Cooking
@@ -55,9 +55,9 @@ career-profile:
       Donec quam felis, ultricies nec, pellentesque eu.
       Second paragraph if required.
 education:
-    - degree: MSc in Computer Science
-      university: University of London
-      time: 2011 - 2012
+    - degree: Masters in Econometrics of Banking and Finance
+      university: Aix-Marseille School of Economics
+      time: 2016 - 2017
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -66,9 +66,9 @@ education:
         pretium quis, sem.
           - Bullet point
           - Bullet point
-    - degree: BSc in Applied Mathematics
-      university: Bristol University
-      time: 2007 - 2011
+    - degree: Masters in European Business Administration
+      university: IAE Bordeaux
+      time: 2015 - 2016
       details: |
         Describe your study here lorem ipsum dolor sit amet, consectetuer
         adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum
@@ -168,23 +168,19 @@ skills:
     title: Skills &amp; Proficiency
 
     toolset:
-      - name: Python & Django
-        level: 98%
+      - name: Python 
+        level: 40%
 
-      - name: Javascript & jQuery
-        level: 98%
+      - name: R
+        level: 20%
 
-      - name: Angular
-        level: 98%
+      - name: Tableau
+        level: 20%
 
-      - name: HTML5 & CSS
-        level: 95%
+      - name: MY-SQL
+        level: 20%
 
-      - name: Ruby on Rails
-        level: 85%
-
-      - name: Sketch & Photoshop
-        level: 60%
+      
 
 footer: >
     Designed with <i class="fas fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank" rel="nofollow">Xiaoying Riley</a>
