--- a/_data/data.yml
+++ b/_data/data.yml
@@ -8,13 +8,13 @@ sidebar:
 
     # Profile information
     name: Bimesh UPRETI
-    tagline: Data Scientist
-    avatar: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
+    tagline: 
+    avatar: profile.JPG  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
     # Sidebar links
     email: mesanobabu@gmail.com
     phone: 04 51 05 03 06
-    website: blog.webjeda.com #do not add http://
+    website:  #do not add http://
     linkedin: Bimesh Upreti
     github: https://github.com/bimeshupreti
     telegram: # add your nickname without '@' sign
